Events, sports and TFS/Menu

--- a/404.html
+++ b/404.html
@@ -24,60 +24,69 @@
 			  <div class="nav-mobile"><a id="nav-toggle"><span></span></a></div>
 			  <ul class="nav-list">
 				<li>
-					<a href="/">HOME</a>
+				<a href="/">HOME</a>
+				</li>
+				<li>
+				<a href="about">ABOUT</a>
+				</li>
+				<li>
+				<a>WHAT WE DO</a>
+				<ul class="nav-dropdown">
+					<li>
+					<a href="what-we-do#community-development">COMMUNITY DEVELOPMENT</a>
 					</li>
 					<li>
-					<a href="about">ABOUT</a>
+					<a href="what-we-do#education">EDUCATION AND TRAINING</a>
 					</li>
 					<li>
-					<a>WHAT WE DO</a>
-					<ul class="nav-dropdown">
-						<li>
-						<a href="what-we-do#community-development">COMMUNITY DEVELOPMENT</a>
-						</li>
-						<li>
-						<a href="what-we-do#education">EDUCATION AND TRAINING</a>
-						</li>
-						<li>
-						<a href="what-we-do#youth">YOUTH ACTIVITIES</a>
-						</li>
-						<li>
-						<a href="what-we-do#arts">ARTS, CULTURE AND HERITAGE</a>
-						</li>
-						<li>
-						<a href="what-we-do#sports">SPORTS</a>
-						</li>
-					</ul>
+					<a href="what-we-do#youth">YOUTH ACTIVITIES</a>
 					</li>
 					<li>
-					<a href="timetable">TIMETABLE</a>
+					<a href="what-we-do#arts">ARTS, CULTURE AND HERITAGE</a>
 					</li>
 					<li>
-					<a>FORMS</a>
-					<ul class="nav-dropdown">
-					  <li>
-					  <a href="forms#venue-hire">VENUE HIRE</a>
-					  </li>
-					  <li>
-					  <a href="forms#arabic-school">THE FUTURE SCHOOL</a>
-					  </li>
-					</ul>
+					<a href="what-we-do#sports">SPORTS</a>
 					</li>
-					<li>
-					<a href="events">EVENTS</a> 				
-					</li>
-					<li>
-					<a href="contact">CONTACT</a>
-					</li>
-					<li>
-					  <a href="donate" class="button special">DONATE</a>
-					</li>
-				  </ul>
+					<!-- <li>
+					<a href="what-we-do#other">FACILITIES AND THE FUTURE SCHOOL</a>
+					</li> -->
+				</ul>
+				</li>
+				<li>
+				<a href="events">EVENTS</a>
+				</li>
+				<li>
+				<a href="aden-steelers">ADEN STEELERS FC</a>
+				</li>
+				<!-- <li>
+				<a href="tfs">TFS</a>
+				</li> -->
+				<li>
+				<a href="timetable">TIMETABLE</a>
+				</li>
+				<li>
+				<a>FORMS</a>
+				<ul class="nav-dropdown">
+				  <li>
+				  <a href="forms#venue-hire">VENUE HIRE</a>
+				  </li>
+				  <li>
+				  <a href="forms#arabic-school">THE FUTURE SCHOOL</a>
+				  </li>
+				</ul>
+				</li>		
+				<li>
+				<a href="contact">CONTACT</a>
+				</li>
+				<li>
+				  <a href="donate" class="button special">DONATE</a>
+				</li>
+			  </ul>
 		  
 					  
 			  </nav>
 			</div>
-			</section>
+		</section>
 
 		<!-- One -->
 			<section id="One" class="wrapper style3">
