--- a/contact.html
+++ b/contact.html
@@ -31,38 +31,24 @@
 				<li>
 				<a>WHAT WE DO</a>
 				<ul class="nav-dropdown">
-				  <li>
-				  <a href="what-we-do#community-development">COMMUNITY DEVELOPMENT</a>
-				  </li>
-				  <li>
-				  <a href="what-we-do#education">EDUCATION AND TRAINING</a>
-				  </li>
-				  <li>
-				  <a href="what-we-do#youth">YOUTH ACTIVITIES</a>
-				  </li>
-				  <li>
-				  <a href="what-we-do#arts">ARTS, CULTURE AND HERITAGE</a>
-				  </li>
-				  <li>
-				  <a href="what-we-do#sports">SPORTS</a>
-				  </li><!--
-				  <li>
-				  <a href="what-we-do#other">FACILITIES AND THE FUTURE SCHOOL</a>
-				  </li>-->
-				</ul>
-				</li>
-				<li>
-				<a href="timetable">TIMETABLE</a>
-				</li>
-				<li>
-				<a>FORMS</a>
-				<ul class="nav-dropdown">
 					<li>
-					<a href="forms#venue-hire">VENUE HIRE</a>
+					<a href="what-we-do#community-development">COMMUNITY DEVELOPMENT</a>
 					</li>
 					<li>
-					<a href="forms#arabic-school">THE FUTURE SCHOOL</a>
+					<a href="what-we-do#education">EDUCATION AND TRAINING</a>
 					</li>
+					<li>
+					<a href="what-we-do#youth">YOUTH ACTIVITIES</a>
+					</li>
+					<li>
+					<a href="what-we-do#arts">ARTS, CULTURE AND HERITAGE</a>
+					</li>
+					<li>
+					<a href="what-we-do#sports">SPORTS</a>
+					</li>
+					<!-- <li>
+					<a href="what-we-do#other">FACILITIES AND THE FUTURE SCHOOL</a>
+					</li> -->
 				</ul>
 				</li>
 				<li>
@@ -71,6 +57,23 @@
 				<li>
 				<a href="aden-steelers">ADEN STEELERS FC</a>
 				</li>
+				<!-- <li>
+				<a href="tfs">TFS</a>
+				</li> -->
+				<li>
+				<a href="timetable">TIMETABLE</a>
+				</li>
+				<li>
+				<a>FORMS</a>
+				<ul class="nav-dropdown">
+				  <li>
+				  <a href="forms#venue-hire">VENUE HIRE</a>
+				  </li>
+				  <li>
+				  <a href="forms#arabic-school">THE FUTURE SCHOOL</a>
+				  </li>
+				</ul>
+				</li>		
 				<li>
 				<a>CONTACT</a>
 				</li>
@@ -82,7 +85,7 @@
 					  
 			  </nav>
 			</div>
-			</section>
+		</section>
 
 		<!-- One -->
 			<section id="One" class="wrapper style3">
@@ -130,7 +133,49 @@
 							</form> -->
 
 							<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfknHSVgouguXPXDE2VzpLdotZ8lh1MEatckHSUwDQZXyOTrw/viewform?embedded=true" width="100%" height="900" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+							<br>
+							<br>
+							<br>
 
+							<div class="grid-style">
+
+								<div>
+									<div class="box" id="arabic-school">
+										<div class="image fit">
+											<img src="images/pic02.jpg" alt="" />
+										</div>
+										<div class="content">
+											<header class="align-center">
+												<p>Sheffield Arabic Complementary School</p>
+												<h2>The Future School</h2>
+											</header>
+											<p> The Future School offers cultural and supplementary language education classes in Arabic to children aged 5 to 15. It proudly preserves the roots and identity of Yemenis and the wider Arab community. It also provides a platform for the children to celebrate there cultural heritage.</p>
+											<footer class="align-center">
+												<a href="forms/registration" class="button alt">Register Interest</a>
+											</footer>
+										</div>
+									</div>
+								</div>
+		
+								<div>
+									<div class="box" id="venue-hire">
+										<div class="image fit">
+											<img src="images/pic05.jpg" alt="" />
+										</div>
+										<div class="content">
+											<header class="align-center">
+												<p>Hire Our Building</p>
+												<h2>Venue Hire</h2>
+											</header>
+											<p> We have an air conditioned open plan space with a capacity for upto 80 people with internet connection, a sound system, a kitchen, disabled access and toilets, front and rear car parking. It is a perfect event space available to hire for clubs, groups, workshops, meetings, parties and other special events.</p>
+											<footer class="align-center">
+												<a href="forms/venue-hire" class="button alt">Book</a>
+											</footer>
+										</div>
+									</div>
+								</div>
+		
+							</div>
 						</div>
 					</div>
 				</div>
