--- a/forms/venue-hire.html
+++ b/forms/venue-hire.html
@@ -16,7 +16,7 @@
 			<div class="nav-container">
 			  <div class="logo">
 				<a href="/">
-				  <img alt="YAFA Logo" src="../images/favicon.png">
+				  <img alt="YAFA Logo" src="images/favicon.png">
 				</a>
 			  </div>
 		  
@@ -30,25 +30,37 @@
 				<a href="../about">ABOUT</a>
 				</li>
 				<li>
-				<a href="">WHAT WE DO</a>
+				<a>WHAT WE DO</a>
 				<ul class="nav-dropdown">
-				  <li>
-				  <a href="../what-we-do#community-development">COMMUNITY DEVELOPMENT</a>
-				  </li>
-				  <li>
-				  <a href="../what-we-do#education">EDUCATION AND TRAINING</a>
-				  </li>
-				  <li>
-				  <a href="../what-we-do#youth">YOUTH ACTIVITIES</a>
-				  </li>
-				  <li>
-				  <a href="../what-we-do#arts">ARTS, CULTURE AND HERITAGE</a>
-				  </li>
-				  <li>
-				  <a href="../what-we-do#sports">SPORTS</a>
-				  </li>
+					<li>
+					<a href="../what-we-do#community-development">COMMUNITY DEVELOPMENT</a>
+					</li>
+					<li>
+					<a href="../what-we-do#education">EDUCATION AND TRAINING</a>
+					</li>
+					<li>
+					<a href="../what-we-do#youth">YOUTH ACTIVITIES</a>
+					</li>
+					<li>
+					<a href="../what-we-do#arts">ARTS, CULTURE AND HERITAGE</a>
+					</li>
+					<li>
+					<a href="../what-we-do#sports">SPORTS</a>
+					</li>
+					<!-- <li>
+					<a href="../what-we-do#other">FACILITIES AND THE FUTURE SCHOOL</a>
+					</li> -->
 				</ul>
 				</li>
+				<li>
+				<a href="../events">EVENTS</a>
+				</li>
+				<li>
+				<a href="../aden-steelers">ADEN STEELERS FC</a>
+				</li>
+				<!-- <li>
+				<a href="../tfs">TFS</a>
+				</li> -->
 				<li>
 				<a href="../timetable">TIMETABLE</a>
 				</li>
@@ -62,13 +74,7 @@
 				  <a href="../forms#arabic-school">THE FUTURE SCHOOL</a>
 				  </li>
 				</ul>
-				</li>
-				<li>
-				<a href="../events">EVENTS</a>
-				</li>
-				<li>
-				<a href="../aden-steelers">ADEN STEELERS</a>
-				</li>
+				</li>		
 				<li>
 				<a href="../contact">CONTACT</a>
 				</li>
@@ -80,7 +86,7 @@
 					  
 			  </nav>
 			</div>
-			</section>
+		</section>
 
 		<!-- One -->
 			<section id="One" class="wrapper style3">
