--- a/timetable.html
+++ b/timetable.html
@@ -32,38 +32,24 @@
 				<li>
 				<a>WHAT WE DO</a>
 				<ul class="nav-dropdown">
-				  <li>
-				  <a href="what-we-do#community-development">COMMUNITY DEVELOPMENT</a>
-				  </li>
-				  <li>
-				  <a href="what-we-do#education">EDUCATION AND TRAINING</a>
-				  </li>
-				  <li>
-				  <a href="what-we-do#youth">YOUTH ACTIVITIES</a>
-				  </li>
-				  <li>
-				  <a href="what-we-do#arts">ARTS, CULTURE AND HERITAGE</a>
-				  </li>
-				  <li>
-				  <a href="what-we-do#sports">SPORTS</a>
-				  </li><!--
-				  <li>
-				  <a href="what-we-do#other">FACILITIES AND THE FUTURE SCHOOL</a>
-				  </li>-->
-				</ul>
-				</li>
-				<li>
-				<a>TIMETABLE</a>
-				</li>
-				<li>
-				<a>FORMS</a>
-				<ul class="nav-dropdown">
 					<li>
-					<a href="forms#venue-hire">VENUE HIRE</a>
+					<a href="what-we-do#community-development">COMMUNITY DEVELOPMENT</a>
 					</li>
 					<li>
-					<a href="forms#arabic-school">THE FUTURE SCHOOL</a>
+					<a href="what-we-do#education">EDUCATION AND TRAINING</a>
 					</li>
+					<li>
+					<a href="what-we-do#youth">YOUTH ACTIVITIES</a>
+					</li>
+					<li>
+					<a href="what-we-do#arts">ARTS, CULTURE AND HERITAGE</a>
+					</li>
+					<li>
+					<a href="what-we-do#sports">SPORTS</a>
+					</li>
+					<!-- <li>
+					<a href="what-we-do#other">FACILITIES AND THE FUTURE SCHOOL</a>
+					</li> -->
 				</ul>
 				</li>
 				<li>
@@ -72,6 +58,23 @@
 				<li>
 				<a href="aden-steelers">ADEN STEELERS FC</a>
 				</li>
+				<!-- <li>
+				<a href="tfs">TFS</a>
+				</li> -->
+				<li>
+				<a>TIMETABLE</a>
+				</li>
+				<li>
+				<a>FORMS</a>
+				<ul class="nav-dropdown">
+				  <li>
+				  <a href="forms#venue-hire">VENUE HIRE</a>
+				  </li>
+				  <li>
+				  <a href="forms#arabic-school">THE FUTURE SCHOOL</a>
+				  </li>
+				</ul>
+				</li>		
 				<li>
 				<a href="contact">CONTACT</a>
 				</li>
@@ -83,7 +86,7 @@
 					  
 			  </nav>
 			</div>
-			</section>
+		</section>
 
 		<!-- One -->
 			<section id="One" class="wrapper style3">
