--- a/what-we-do.html
+++ b/what-we-do.html
@@ -24,66 +24,69 @@
 			  <div class="nav-mobile"><a id="nav-toggle"><span></span></a></div>
 			  <ul class="nav-list">
 				<li>
-					<a href="/">HOME</a>
+				<a href="/">HOME</a>
+				</li>
+				<li>
+				<a href="about">ABOUT</a>
+				</li>
+				<li>
+				<a>WHAT WE DO</a>
+				<ul class="nav-dropdown">
+					<li>
+					<a href="what-we-do#community-development">COMMUNITY DEVELOPMENT</a>
 					</li>
 					<li>
-					<a href="about">ABOUT</a>
+					<a href="what-we-do#education">EDUCATION AND TRAINING</a>
 					</li>
 					<li>
-					<a>WHAT WE DO</a>
-					<ul class="nav-dropdown">
-						<li>
-						<a href="#community-development">COMMUNITY DEVELOPMENT</a>
-						</li>
-						<li>
-						<a href="#education">EDUCATION AND TRAINING</a>
-						</li>
-						<li>
-						<a href="#youth">YOUTH ACTIVITIES</a>
-						</li>
-						<li>
-						<a href="#arts">ARTS, CULTURE AND HERITAGE</a>
-						</li>
-						<li>
-						<a href="#sports">SPORTS</a>
-						</li>
-						<!-- <li>
-						<a href="#other">FACILITIES AND THE FUTURE SCHOOL</a>
-						</li> -->
-					</ul>
+					<a href="what-we-do#youth">YOUTH ACTIVITIES</a>
 					</li>
 					<li>
-					<a href="timetable">TIMETABLE</a>
+					<a href="what-we-do#arts">ARTS, CULTURE AND HERITAGE</a>
 					</li>
 					<li>
-					<a>FORMS</a>
-					<ul class="nav-dropdown">
-					  <li>
-					  <a href="forms#venue-hire">VENUE HIRE</a>
-					  </li>
-					  <li>
-					  <a href="forms#arabic-school">THE FUTURE SCHOOL</a>
-					  </li>
-					</ul>
+					<a href="what-we-do#sports">SPORTS</a>
 					</li>
-					<li>
-					<a href="events">EVENTS</a>
-					</li>
-					<li>
-					<a href="aden-steelers">ADEN STEELERS FC</a>
-					</li>
-					<li>
-					<a href="contact">CONTACT</a>
-					</li>
-					<li>
-					  <a href="donate" class="button special">DONATE</a>
-					</li>
-				  </ul>
+					<!-- <li>
+					<a href="what-we-do#other">FACILITIES AND THE FUTURE SCHOOL</a>
+					</li> -->
+				</ul>
+				</li>
+				<li>
+				<a href="events">EVENTS</a>
+				</li>
+				<li>
+				<a href="aden-steelers">ADEN STEELERS FC</a>
+				</li>
+				<!-- <li>
+				<a href="tfs">TFS</a>
+				</li> -->
+				<li>
+				<a href="timetable">TIMETABLE</a>
+				</li>
+				<li>
+				<a>FORMS</a>
+				<ul class="nav-dropdown">
+				  <li>
+				  <a href="forms#venue-hire">VENUE HIRE</a>
+				  </li>
+				  <li>
+				  <a href="forms#arabic-school">THE FUTURE SCHOOL</a>
+				  </li>
+				</ul>
+				</li>		
+				<li>
+				<a href="contact">CONTACT</a>
+				</li>
+				<li>
+				  <a href="donate" class="button special">DONATE</a>
+				</li>
+			  </ul>
 		  
 					  
 			  </nav>
 			</div>
-			</section>
+		</section>
 
 		<!-- One -->
 			<section id="One" class="wrapper style3">
@@ -110,10 +113,14 @@
                             <h3 id="youth">YOUTH ACTIVITIES</h3>
 							<p>The youth club is held every Friday evening. Currently, we have 15 attendees between the ages of 16-25.</p>
                             <p>YAFA currently run two Girls club held every Monday (13-18) and Sunday (18+) evenings, both clubs have over 20 attendees and are run by volunteers.</p>
+							<p>Youth Fitness Classes 11 to 16 years.</p>
                             <h3 id="arts">ARTS, CULTURE AND HERITAGE</h3>
                             <p>The local community requested we set up an Arabic school. It's our third year, and we now have seven teachers and 110 students. The school opens Thursday evening between 5.30 PM - 7.30 PM and Saturday between 11AM - 2PM. If you wish your child to attend please register your interest <a href="forms#arabic-school">HERE</a></p>
                             <h3 id="sports">SPORTS</h3>
 							<p>YAFA is proud to be the away shirt sponsor for the Aden Steelers FC U14 team for the 2022-23 & 2023-24 seasons.</p>
+							<p>Youth Fitness Classes for 11 to 16 year olds are held twice weekly on Wednesday and Friday evenings.</p>
+                            <p>5-a-side football every Saturday at Sport Sheffield Goodwin Sports Centre. Please contact us for details.</p>
+                            <p>Swimming every Saturday morning at Hillsborough Leisure Centre. Please contact us for details.</p>
                         </div>
 					</div>
 				</div>
