--- a/aden-steelers.html
+++ b/aden-steelers.html
@@ -32,26 +32,35 @@
 				<li>
 				<a>WHAT WE DO</a>
 				<ul class="nav-dropdown">
-				  <li>
-				  <a href="what-we-do#community-development">COMMUNITY DEVELOPMENT</a>
-				  </li>
-				  <li>
-				  <a href="what-we-do#education">EDUCATION AND TRAINING</a>
-				  </li>
-				  <li>
-				  <a href="what-we-do#youth">YOUTH ACTIVITIES</a>
-				  </li>
-				  <li>
-				  <a href="what-we-do#arts">ARTS, CULTURE AND HERITAGE</a>
-				  </li>
-				  <li>
-				  <a href="what-we-do#sports">SPORTS</a>
-				  </li><!--
-				  <li>
-				  <a href="what-we-do#other">FACILITIES AND THE FUTURE SCHOOL</a>
-				  </li>-->
+					<li>
+					<a href="what-we-do#community-development">COMMUNITY DEVELOPMENT</a>
+					</li>
+					<li>
+					<a href="what-we-do#education">EDUCATION AND TRAINING</a>
+					</li>
+					<li>
+					<a href="what-we-do#youth">YOUTH ACTIVITIES</a>
+					</li>
+					<li>
+					<a href="what-we-do#arts">ARTS, CULTURE AND HERITAGE</a>
+					</li>
+					<li>
+					<a href="what-we-do#sports">SPORTS</a>
+					</li>
+					<!-- <li>
+					<a href="what-we-do#other">FACILITIES AND THE FUTURE SCHOOL</a>
+					</li> -->
 				</ul>
 				</li>
+				<li>
+				<a href="events">EVENTS</a>
+				</li>
+				<li>
+				<a>ADEN STEELERS FC</a>
+				</li>
+				<!-- <li>
+				<a href="tfs">TFS</a>
+				</li> -->
 				<li>
 				<a href="timetable">TIMETABLE</a>
 				</li>
@@ -59,19 +68,13 @@
 				<a>FORMS</a>
 				<ul class="nav-dropdown">
 				  <li>
-				  <a>VENUE HIRE</a>
+				  <a href="forms#venue-hire">VENUE HIRE</a>
 				  </li>
 				  <li>
-				  <a>THE FUTURE SCHOOL</a>
+				  <a href="forms#arabic-school">THE FUTURE SCHOOL</a>
 				  </li>
 				</ul>
-				</li>
-				<li>
-				<a href="events">EVENTS</a>
-				</li>
-				<li>
-				<a href="aden-steelers">ADEN STEELERS FC</a>
-				</li>								
+				</li>		
 				<li>
 				<a href="contact">CONTACT</a>
 				</li>
@@ -83,7 +86,7 @@
 					  
 			  </nav>
 			</div>
-			</section>
+		</section>
 
 		<!-- One -->
 			<section id="One" class="wrapper style3">
