--- a/events.html
+++ b/events.html
@@ -48,26 +48,35 @@
 				<li>
 				<a>WHAT WE DO</a>
 				<ul class="nav-dropdown">
-				  <li>
-				  <a href="what-we-do#community-development">COMMUNITY DEVELOPMENT</a>
-				  </li>
-				  <li>
-				  <a href="what-we-do#education">EDUCATION AND TRAINING</a>
-				  </li>
-				  <li>
-				  <a href="what-we-do#youth">YOUTH ACTIVITIES</a>
-				  </li>
-				  <li>
-				  <a href="what-we-do#arts">ARTS, CULTURE AND HERITAGE</a>
-				  </li>
-				  <li>
-				  <a href="what-we-do#sports">SPORTS</a>
-				  </li><!--
-				  <li>
-				  <a href="what-we-do#other">FACILITIES AND THE FUTURE SCHOOL</a>
-				  </li>-->
+					<li>
+					<a href="what-we-do#community-development">COMMUNITY DEVELOPMENT</a>
+					</li>
+					<li>
+					<a href="what-we-do#education">EDUCATION AND TRAINING</a>
+					</li>
+					<li>
+					<a href="what-we-do#youth">YOUTH ACTIVITIES</a>
+					</li>
+					<li>
+					<a href="what-we-do#arts">ARTS, CULTURE AND HERITAGE</a>
+					</li>
+					<li>
+					<a href="what-we-do#sports">SPORTS</a>
+					</li>
+					<!-- <li>
+					<a href="what-we-do#other">FACILITIES AND THE FUTURE SCHOOL</a>
+					</li> -->
 				</ul>
 				</li>
+				<li>
+				<a>EVENTS</a>
+				</li>
+				<li>
+				<a href="aden-steelers">ADEN STEELERS FC</a>
+				</li>
+				<!-- <li>
+				<a href="tfs">TFS</a>
+				</li> -->
 				<li>
 				<a href="timetable">TIMETABLE</a>
 				</li>
@@ -81,13 +90,7 @@
 				  <a href="forms#arabic-school">THE FUTURE SCHOOL</a>
 				  </li>
 				</ul>
-				</li>
-				<li>
-				<a>EVENTS</a>
-				</li>
-				<li>
-				<a href="aden-steelers">ADEN STEELERS FC</a>
-				</li>
+				</li>		
 				<li>
 				<a href="contact">CONTACT</a>
 				</li>
@@ -99,7 +102,7 @@
 					  
 			  </nav>
 			</div>
-			</section>
+		</section>
 
 		<!-- One -->
 			<section id="One" class="wrapper style3">
@@ -125,26 +128,74 @@
 					<br>
 					<h3>PREVIOUS EVENTS</h3>
 
+					<p>The charity fundraising event held at N.U. Base to support the people of Yemen, raised an impressive £6000.</p>
+					<div class="pswp-gallery" id="my-gallery">
+						<a href="images/gallery/IMG-(8).jpeg" data-pswp-width="1242" data-pswp-height="964" target="_blank">
+						  <img src="images/gallery/IMG-(8).jpeg" width="280" height="210" alt=""/>
+						</a>
+						<a href="images/gallery/IMG-(14).jpeg" data-pswp-width="1600" data-pswp-height="1288" target="_blank">
+						  <img src="images/gallery/IMG-(14).jpeg" width="280" height="210" alt=""/>
+						</a>
+						<a href="images/gallery/IMG-(9).jpeg" data-pswp-width="1242" data-pswp-height="930" target="_blank">
+						  <img src="images/gallery/IMG-(9).jpeg" width="280" height="210" alt=""/>
+						</a>
+						<a href="images/gallery/IMG-(10).jpeg" data-pswp-width="1600" data-pswp-height="1200" target="_blank">
+						  <img src="images/gallery/IMG-(10).jpeg" width="280" height="210" alt=""/>
+						</a>
+						<a href="images/gallery/IMG-(16).jpeg" data-pswp-width="1200" data-pswp-height="1600" target="_blank">
+						  <img src="images/gallery/IMG-(16).jpeg" width="280" height="210" alt=""/>
+						</a>
+						<a href="images/gallery/IMG-(11).jpeg" data-pswp-width="1242" data-pswp-height="896" target="_blank">
+						  <img src="images/gallery/IMG-(11).jpeg" width="280" height="210" alt=""/>
+						</a>
+						<a href="images/gallery/IMG-(7).jpeg" data-pswp-width="600" data-pswp-height="800" target="_blank">
+						  <img src="images/gallery/IMG-(7).jpeg" width="280" height="210" alt=""/>
+						</a>
+						<a href="images/gallery/IMG-(6).jpeg" data-pswp-width="1242" data-pswp-height="1494" target="_blank">
+							<img src="images/gallery/IMG-(6).jpeg" width="280" height="210" alt=""/>
+						</a>
+						<a href="images/gallery/IMG-(12).jpeg" data-pswp-width="1200" data-pswp-height="1600" target="_blank">
+						  <img src="images/gallery/IMG-(12).jpeg" width="280" height="210" alt=""/>
+						</a>
+						<a href="images/gallery/IMG-(13).jpeg" data-pswp-width="1200" data-pswp-height="1600" target="_blank">
+						  <img src="images/gallery/IMG-(13).jpeg" width="280" height="210" alt=""/>
+						</a>
+						<a href="images/gallery/IMG-(15).jpeg" data-pswp-width="1200" data-pswp-height="1600" target="_blank">
+						  <img src="images/gallery/IMG-(15).jpeg" width="280" height="210" alt=""/>
+						</a>
+					</div>
+					<br>
+
+					<p>Family fun day Saturday 9th September 2023 organised by <b>Sisters of Hope</b> to support families in need in Yemen.</p>
+					<div class="grid-style">
+							<div class="box">
+								<div class="image fit">
+									<img src="images/events/charity-event-flyer.jpeg" alt="Yemen Fundraiser September 2022" />
+								</div>
+							</div>
+					</div>
+
+					<header class="align-center">
+						<p></p>
+					</header>
+
 					<p>Annual General Meeting Friday 11th November 2022 call <a href="tel: +447733435297">07733435297</a> or email <a href="mailto: yafacharityorganisation@hotmail.com">yafacharityorganisation@hotmail.com</a></p>
 					<div class="grid-style">
-
-					<div>
 						<div class="box">
 							<div class="image fit">
 								<img src="images/events/agm-november-2022-en.jfif" alt="AGM November 2022" />
 							</div>
 						</div>
-					</div>
-
-					<div>
 						<div class="box">
 							<div class="image fit">
 								<img src="images/events/agm-november-2022-ar.jfif" alt="AGM November 2022 Arabic" />
 							</div>
 						</div>
 					</div>
-
-					</div>
+					
+					<header class="align-center">
+						<p></p>
+					</header>
 
 					<p>The Queen's Platinum Jubilee 2022 celebration</p>
 					<div class="pswp-gallery" id="my-gallery">
@@ -166,24 +217,24 @@
 					</div>
 					<br>
 
+					<header class="align-center">
+						<p></p>
+					</header>
+
 					<p>Blackpool trip summer 2021</p>
 					<div class="grid-style">
 
-					<div>
 						<div class="box">
 							<div class="image fit">
 								<img src="images/events/blackpool-summer-2021-en.jpeg" alt="Blackpool Summer 2021 Trip Poster" />
 							</div>
 						</div>
-					</div>
 
-					<div>
 						<div class="box">
 							<div class="image fit">
 								<img src="images/events/blackpool-summer-2021-ar.jpeg" alt="Blackpool Summer 2021 Trip Poster Arabic" />
 							</div>
 						</div>
-					</div>
 
 					</div>
 
