--- a/index.html
+++ b/index.html
@@ -65,25 +65,28 @@
 				</ul>
 				</li>
 				<li>
+				<a href="events">EVENTS</a>
+				</li>
+				<li>
+				<a href="aden-steelers">ADEN STEELERS FC</a>
+				</li>
+				<!-- <li>
+				<a href="tfs">TFS</a>
+				</li> -->
+				<li>
 				<a href="timetable">TIMETABLE</a>
 				</li>
 				<li>
 				<a>FORMS</a>
 				<ul class="nav-dropdown">
-					<li>
-					<a href="forms#venue-hire">VENUE HIRE</a>
-					</li>
-					<li>
-					<a href="forms#arabic-school">THE FUTURE SCHOOL</a>
-					</li>
+				  <li>
+				  <a href="forms#venue-hire">VENUE HIRE</a>
+				  </li>
+				  <li>
+				  <a href="forms#arabic-school">THE FUTURE SCHOOL</a>
+				  </li>
 				</ul>
-				</li>
-				<li>
-				<a href="events">EVENTS</a>
-				</li>
-				<li>
-				<a href="aden-steelers">ADEN STEELERS FC</a>
-				</li>				
+				</li>		
 				<li>
 				<a href="contact">CONTACT</a>
 				</li>
@@ -95,7 +98,7 @@
 					  
 			  </nav>
 			</div>
-			</section>
+		</section>
 
 
 		<!-- Banner -->
@@ -113,7 +116,7 @@
 					<img src="images/slide04.jpg"  alt="" />
 				</article>
 				<article>
-					<img src="images/slide05.jpg"  alt="" />
+					<img src="images/slide05.jpeg"  alt="" />
 				</article>
 			</section>
 
