--- a/forms/registration.html
+++ b/forms/registration.html
@@ -16,7 +16,7 @@
 			<div class="nav-container">
 			  <div class="logo">
 				<a href="/">
-				  <img alt="YAFA Logo" src="images/favicon.png">
+				  <img alt="YAFA Logo" src="../images/favicon.png">
 				</a>
 			  </div>
 		  
