--- a/forms/registration.html
+++ b/forms/registration.html
@@ -135,6 +135,11 @@
 				<div class="copyright">
 					&copy; <script>document.write(new Date().getFullYear())</script> THE YAFA CHARITY ORGANISATION. All rights reserved.
 				</div>
+				<br>
+				<div>
+					58 Fawcett Street, Netherthorpe, Sheffield, S3 7PN<br>
+					Registered Charity Incorporated Organisation (CIO) number: 1205565
+				</div>
 			</footer>
 
 		<!-- Scripts -->
