--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 		<title>YAFA - Youth And Family Alliance</title>
 		<meta charset="utf-8" />
 		<meta name="robots" content="noindex, nofollow, nosnippet">
-		<meta name="description" content="The YAFA Charity Organisation is a British registered charitable organization committed to supporting individuals and families residing in Upperthorpe and Netherthorpe and surrounding areas. To endeavour to improve the lives of people within these communities, through providing support and access to adequate facilities for educational training, youth mentoring/activities and social cohesion projects through engaging and working closely with the local authority and other charities.">
+		<meta name="description" content="Registered CIO number: 1205565. The YAFA Charity Organisation is a British registered charitable organization committed to supporting individuals and families residing in Upperthorpe and Netherthorpe and surrounding areas. To endeavour to improve the lives of people within these communities, through providing support and access to adequate facilities for educational training, youth mentoring/activities and social cohesion projects through engaging and working closely with the local authority and other charities.">
 		
 		<meta property="og:site_name" content="YAFA - Youth And Family Alliance">
 		<meta property="og:title" content="YAFA - Youth And Family Alliance" />
-		<meta property="og:description" content="The YAFA Charity Organisation is a British registered charitable organization committed to supporting individuals and families residing in Upperthorpe and Netherthorpe and surrounding areas. To endeavour to improve the lives of people within these communities, through providing support and access to adequate facilities for educational training, youth mentoring/activities and social cohesion projects through engaging and working closely with the local authority and other charities." />
+		<meta property="og:description" content="Registered CIO number: 1205565. The YAFA Charity Organisation is a British registered charitable organization committed to supporting individuals and families residing in Upperthorpe and Netherthorpe and surrounding areas. To endeavour to improve the lives of people within these communities, through providing support and access to adequate facilities for educational training, youth mentoring/activities and social cohesion projects through engaging and working closely with the local authority and other charities." />
 		<meta property="og:image:secure_url" content="https://www.yafacharity.org.uk/images/logo.jpg">
 		<meta property="og:image:type" content="image/jpeg" />
 		<meta property="og:type" content="website" />
@@ -218,6 +218,11 @@
 				</div>
 				<div class="copyright">
 					&copy; <script>document.write(new Date().getFullYear())</script> THE YAFA CHARITY ORGANISATION. All rights reserved.
+				</div>
+				<br>
+				<div>
+					58 Fawcett Street, Netherthorpe, Sheffield, S3 7PN<br>
+					Registered Charity Incorporated Organisation (CIO) number: 1205565
 				</div>
 			</footer>
 
