--- a/timetable.html
+++ b/timetable.html
@@ -93,7 +93,7 @@
 				<div class="inner">
 					<header class="align-center">
 						<p>Whats On</p>
-						<h2>Timetable</h2>
+						<h2>Timetable/Activities</h2>
 					</header>
 				</div>
 			</section>
