Update cycling uk and events

--- a/events.html
+++ b/events.html
@@ -126,7 +126,33 @@
 						<h2>There are no upcoming events available.</h2>
 					</header>
 					<br>
-					<h3>PREVIOUS EVENTS</h3>
+					<h3 id="previous">PREVIOUS EVENTS</h3>
+					<p>During the spring half term school holidays, YAFA ran holiday activities for the youth.</p>
+					<div class="pswp-gallery" id="my-gallery">
+						<a href="images/gallery/IMG-(17).jpeg" data-pswp-width="1200" data-pswp-height="1600" target="_blank">
+							<img src="images/gallery/IMG-(17).jpeg" width="280" height="210" style="object-fit:cover" alt=""/>
+						</a>
+						<a href="images/gallery/IMG-(18).jpeg" data-pswp-width="1200" data-pswp-height="1600" target="_blank">
+							<img src="images/gallery/IMG-(18).jpeg" width="280" height="210" style="object-fit:cover" alt=""/>
+						</a>
+						<a href="images/gallery/IMG-(19).jpeg" data-pswp-width="1600" data-pswp-height="1200" target="_blank">
+							<img src="images/gallery/IMG-(19).jpeg" width="280" height="210" alt=""/>
+						</a>
+						<a href="images/gallery/IMG-(20).jpeg" data-pswp-width="1600" data-pswp-height="1200" target="_blank">
+							<img src="images/gallery/IMG-(20).jpeg" width="280" height="210" alt=""/>
+						</a>
+						<a href="images/gallery/IMG-(21).jpeg" data-pswp-width="1200" data-pswp-height="1600" target="_blank">
+							<img src="images/gallery/IMG-(21).jpeg" width="280" height="210" style="object-fit:cover" alt=""/>
+						</a>
+						<a href="images/gallery/IMG-(22).jpeg" data-pswp-width="1600" data-pswp-height="1200" target="_blank">
+							<img src="images/gallery/IMG-(22).jpeg" width="280" height="210" alt=""/>
+						</a>
+					</div>
+					<br>
+
+					<header class="align-center">
+						<p></p>
+					</header>
 
 					<p>The charity fundraising event held at N.U. Base to support the people of Yemen, raised an impressive £6000.</p>
 					<div class="pswp-gallery" id="my-gallery">
@@ -143,25 +169,25 @@
 						  <img src="images/gallery/IMG-(10).jpeg" width="280" height="210" alt=""/>
 						</a>
 						<a href="images/gallery/IMG-(16).jpeg" data-pswp-width="1200" data-pswp-height="1600" target="_blank">
-						  <img src="images/gallery/IMG-(16).jpeg" width="280" height="210" alt=""/>
+						  <img src="images/gallery/IMG-(16).jpeg" width="280" height="210" style="object-fit:cover" alt=""/>
 						</a>
 						<a href="images/gallery/IMG-(11).jpeg" data-pswp-width="1242" data-pswp-height="896" target="_blank">
 						  <img src="images/gallery/IMG-(11).jpeg" width="280" height="210" alt=""/>
 						</a>
 						<a href="images/gallery/IMG-(7).jpeg" data-pswp-width="600" data-pswp-height="800" target="_blank">
-						  <img src="images/gallery/IMG-(7).jpeg" width="280" height="210" alt=""/>
+						  <img src="images/gallery/IMG-(7).jpeg" width="280" height="210" style="object-fit:cover" alt=""/>
 						</a>
 						<a href="images/gallery/IMG-(6).jpeg" data-pswp-width="1242" data-pswp-height="1494" target="_blank">
-							<img src="images/gallery/IMG-(6).jpeg" width="280" height="210" alt=""/>
+							<img src="images/gallery/IMG-(6).jpeg" width="280" height="210" style="object-fit:cover" alt=""/>
 						</a>
 						<a href="images/gallery/IMG-(12).jpeg" data-pswp-width="1200" data-pswp-height="1600" target="_blank">
-						  <img src="images/gallery/IMG-(12).jpeg" width="280" height="210" alt=""/>
+						  <img src="images/gallery/IMG-(12).jpeg" width="280" height="210" style="object-fit:cover" alt=""/>
 						</a>
 						<a href="images/gallery/IMG-(13).jpeg" data-pswp-width="1200" data-pswp-height="1600" target="_blank">
-						  <img src="images/gallery/IMG-(13).jpeg" width="280" height="210" alt=""/>
+						  <img src="images/gallery/IMG-(13).jpeg" width="280" height="210" style="object-fit:cover" alt=""/>
 						</a>
 						<a href="images/gallery/IMG-(15).jpeg" data-pswp-width="1200" data-pswp-height="1600" target="_blank">
-						  <img src="images/gallery/IMG-(15).jpeg" width="280" height="210" alt=""/>
+						  <img src="images/gallery/IMG-(15).jpeg" width="280" height="210" style="object-fit:cover" alt=""/>
 						</a>
 					</div>
 					<br>
