--- a/what-we-do.html
+++ b/what-we-do.html
@@ -121,6 +121,8 @@
 							<p>Youth Fitness Classes for 11 to 16 year olds are held twice weekly on Wednesday and Friday evenings.</p>
                             <p>5-a-side football every Saturday at Sport Sheffield Goodwin Sports Centre. Please contact us for details.</p>
                             <p>Swimming every Saturday morning at Hillsborough Leisure Centre. Please contact us for details.</p>
+							<h3 id="cycling-uk">THE BIG BIKE REVIVAL</h3>
+							<p>YAFA delivers a programme of free activities and services in partnership with Cycling UK. We offer help to everyone and anyone to begin or return to cycling.</p>
                         </div>
 					</div>
 				</div>
