--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@
 								<li>Saleh Al-Yafai</li>
 							</ul>
 
-							<header class="align-center">
+							<header id="partners" class="align-center">
 								<p>Our Supporters</p>
 								<h2>Our Partners</h2>
 							</header>
